# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import ewaterRouter from "./ewater";
 import monitorRouter from "./monitor";
 import exportRouter from "./export";
+import notifierRouter from "./notifier";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use(ewaterRouter);
 router.use(monitorRouter);
 router.use(exportRouter);
+router.use(notifierRouter);
 
 export default router;
